--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "style-loader": "^2.0.0",
     "vue": "^2.6.11",
     "vue-router": "^3.5.1",
+    "vue-star-rating": "^1.7.0",
     "vuex": "^3.6.2"
   },
   "devDependencies": {
